# cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  coverage-unit.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.cli/: tag.yaml  tag.yaml.example
.github/: Dockerfile  README.md  pull-request.yaml
.github/images/: cli-runtime.Dockerfile
.github/workflows/: README.md  branch-protection.yml  chat-to-issues.yml  cli-gardusig-wiki-sync-repositories.yml  deploy.yml  deploy.yml.example  dispatch.yml  main.yaml  on-check-failure.yml  orchestrator-dispatch.yml  plan-chat-to-issues.yml  pull-request-router.yml  pull-request.yaml  pull-request.yml  release-main.yml  release.yaml  release.yml  release.yml.example  reusable-chat-to-issues.yml  reusable-craft-issue.yml  reusable-craft-pr.yml  reusable-deploy.yml  reusable-release.yml  reusable-review-pr.yml  reusable-test.yml  test-nightly.yml  test.yml  test.yml.example
cli/: cli.py
cli/commands/: backup.py  bookmarks.py  chrome.py  contest.py  docker.py  drive.py  gh.py  git.py  links.py  notion.py  publish.py  pypi.py
cli/integration/: __init__.py  cli_api_checks.py  contest_integration.py  docker_guard.py  docker_integration.py  docker_mocks.py  git_mocks.py  integration_coverage.py  public_commands.py  public_endpoints.py  tag_zip_integration.py  workflow_integration.py  workspaces.py
cli/providers/: base.py  drive_client.py  gh.py  notion.py  onedrive.py
cli/services/: __init__.py  backup_repository.py  backup_zip.py  contest_docker.py  contest_runner.py  drive_sync.py  gh_service.py  git_review.py  git_shortcuts.py  notion_markdown.py  notion_pairs.py  notion_sync.py  pypi_publish.py  replica_deploy.py
cli/utils/: __init__.py  catalog.py  config.py  confirm.py  external_client.py  http.py  process.py  retry.py
config/: README.md  auth.example.yaml  config.example.yaml  config.test.yaml  config.yaml  secrets.manifest.yaml  tag.yaml  tag.yaml.example
config/chat/: repos.yaml
config/ci/: catalog.yaml  config.yaml
config/contest/: defaults.yaml
config/deepseek/: models.yaml
config/gh/: backlog-labelize.batch.yaml  labels.manifest.yaml  priority-levels.yaml  repos.yaml
config/notion/: README.md  tasks.pairs.json
config/opencode/: default.json
config/release/: config.yaml
docker/: cli-base.dockerfile  pull-request.dockerfile  release.dockerfile
docker/hub/: operator.dockerfile
docs/: README.md  architecture.md  backup.md  bookmarks.md  chat.md  chrome.md  ci-workflows.md  config-tasks.md  configuration.md  configure.md  contest.md  craft.md  development.md  docker.md  drive.md  gh-issues.md  gh-workflows.md  gh.md  git.md  hub-operator.md  install.md  large-files.md  notion.md  opencode.md  project.md  public-cli-hardening.md  quick-defaults.md  release.md  secrets.manifest.yaml  secrets.md  setup.md  tasks.md  toolkit.md  workflows.md
docs/notion/: board-ui.md  formulas.md  task-pairs.md
docs/plans/: repository-contract.md  yaml-library.md
docs/workflows/: CATALOG.md  README.md  chrome-extensions.md  cli.md  cpp.md  database.md  docker-stages.md  go.md  language-gates.md  language-repos.md  markdown.md  operator.md  project.md  pull-request-events.md  python-cli.md  tex.md
docs/yaml-sync/: README.md  pull-request-python-cli.yaml  pull-request-router-release-version.patch  release-python-cli.yaml
gardusig_cli/: __main__.py  cli.py
gardusig_cli/commands/: backup.py  bookmarks.py  chrome.py  contest.py  docker.py  drive.py  gh.py  git.py  links.py  notion.py  publish.py  pypi.py
gardusig_cli/integration/: __init__.py  cli_api_checks.py  contest_integration.py  docker_guard.py  docker_integration.py  docker_mocks.py  git_mocks.py  integration_coverage.py  public_commands.py  public_endpoints.py  tag_zip_integration.py  workflow_integration.py  workspaces.py
gardusig_cli/providers/: drive_client.py  gh.py  notion.py
gardusig_cli/services/: __init__.py  backup_repository.py  backup_zip.py  contest_docker.py  contest_runner.py  drive_sync.py  gh_service.py  git_review.py  git_shortcuts.py  notion_pairs.py  notion_sync.py  pypi_publish.py  replica_deploy.py
gardusig_cli/utils/: __init__.py  catalog.py  config.py  confirm.py  external_client.py  process.py  retry.py
scripts/: README.md  _common.sh  _install_common.sh  backup-status.sh  bootstrap.sh  build-pypi.sh  ci-docker-run.py  ci-resolve.py  ci-task-run.py  clean-local.sh  install-pypi.sh  install.sh  integration-smoke.sh  migrate-dockerfiles.py  migrate-pr-configs.py  publish-pypi.sh  release-pypi.sh  release.sh  test-in-docker.sh  test-integration.sh  test-pypi.sh  test-unit.sh
scripts/backup/: status.sh
scripts/chrome/: deploy.sh  export-bookmarks.sh  export.sh  import-bookmarks.sh  import.sh  ingest.sh  wait-download.sh
scripts/ci/: _common.sh  command-surface.sh  core-gates.sh  host-base-version.sh  integration-test.sh  lint.sh  package-integration.sh  pr.sh  pypi-consumer.sh  pypi-release.sh  pypi-test.sh  repo-hygiene.sh  unit-test.sh  (+6 more)
shuttle/: __main__.py  cli.py
src/: __init__.py  __main__.py  cli.py
tests/: README.md  chrome_harness.py  cli_api_harness.py  conftest.py  constants.py  drive_harness.py  gh_harness.py  integration_harness.py  notion_harness.py  pypi_harness.py  test_api_workspaces.py  test_backup_encrypt_config.py  test_backup_repository.py  test_backup_zip.py  test_bookmark_scripts.py  test_bootstrap_structure.py  test_chrome_commands.py  test_chrome_docker_integration.py  test_cli_api_integration.py  test_cli_endpoints.py  test_cli_help.py  test_contest_cli.py  test_contest_docker_integration.py  test_contest_integration_checks.py  test_contest_runner.py  test_contest_validate_integration.py  test_coverage_unit_gate.py  test_docker_commands.py  test_docker_guard.py  test_docker_integration.py  test_docker_integration_checks.py  test_docker_integration_live.py  test_docker_runtime.py  test_drive_commands.py  test_drive_docker_integration.py  test_drive_internal.py  test_drive_sync.py  test_external_api_integration.py  test_external_client.py  test_gh_commands.py  (+42 more)
(+916 files in other folders)
