[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (repo remains github.com/gardusig/python-cli).
name = "gardusig-cli"
version = "1.0.2"
description = "Linux-first CLI for workflow automation, repository checks, and release orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "gardusig" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "twine>=5.0",
]
# Headless operator (craft/review/chat in Docker) — needs DEEPSEEK_API_KEY at runtime.
operator = []
chat = []
# Laptop-only integrations (not required in GitHub Actions runner).
notion = []
craft = []
# Full local dev + CI image.
all = [
  "gardusig-cli[dev]",
]

[project.urls]
Homepage = "https://github.com/gardusig/python-cli"
Documentation = "https://github.com/gardusig/python-cli#readme"
Repository = "https://github.com/gardusig/python-cli"
Issues = "https://github.com/gardusig/python-cli/issues"
Changelog = "https://github.com/gardusig/python-cli/releases"

[project.scripts]
cli = "src.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.integration*"]

[tool.setuptools.data-files]
"share/gardusig-cli/scripts" = ["src/scripts/_common.sh"]
"share/gardusig-cli/scripts/toolkit" = ["src/scripts/toolkit/*.sh"]
"share/gardusig-cli/scripts/markdown" = ["src/scripts/markdown/*.sh"]
"share/gardusig-cli/scripts/python" = ["src/scripts/python/*.sh"]
"share/gardusig-cli/scripts/typescript" = ["src/scripts/typescript/*.sh"]
"share/gardusig-cli/scripts/cpp" = ["src/scripts/cpp/*.sh"]
"share/gardusig-cli/scripts/java" = ["src/scripts/java/*.sh"]
"share/gardusig-cli/scripts/shell" = ["src/scripts/shell/*.sh"]
"share/gardusig-cli/scripts/structure" = ["src/scripts/structure/*.sh"]
"share/gardusig-cli/scripts/validate" = ["src/scripts/validate/*.sh"]
"share/gardusig-cli/scripts/pipeline" = ["src/scripts/pipeline/*.sh"]
"share/gardusig-cli/scripts/gh" = ["src/scripts/gh/*.sh"]
"share/gardusig-cli/scripts/git" = ["src/scripts/git/*.sh"]
"share/gardusig-cli/scripts/chrome" = ["src/scripts/chrome/*.sh"]
"share/gardusig-cli/scripts/drive" = ["src/scripts/drive/*.sh"]
"share/gardusig-cli/scripts/notion" = ["src/scripts/notion/*.sh"]
"share/gardusig-cli/scripts/ci" = ["src/scripts/ci/*.sh"]
"share/gardusig-cli/scripts/craft" = ["src/scripts/craft/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "integration: tests that may require Docker or external runtime isolation",
]
filterwarnings = [
  "error",
]
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

# Unit Docker job uses coverage-unit.ini (omits src/integration/* from coverage totals).
