[build-system]
requires = ["setuptools>=61,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name gardusig-cli; GitHub repo github.com/gardusig/cli.
name = "gardusig-cli"
version = "1.0.4"
description = "Linux-first CLI for workflow automation, repository checks, and release orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "gardusig" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.12",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "PyYAML>=6.0",
  "rich>=13.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "build>=1.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
  "twine>=5.0",
]
# Headless operator (craft/review/chat in Docker) — needs DEEPSEEK_API_KEY at runtime.
operator = []
chat = []
# Laptop-only integrations (not required in GitHub Actions runner).
notion = []
craft = []
# Full local dev + CI image.
all = [
  "gardusig-cli[dev]",
]

[project.urls]
Homepage = "https://github.com/gardusig/cli"
Documentation = "https://github.com/gardusig/cli#readme"
Repository = "https://github.com/gardusig/cli"
Issues = "https://github.com/gardusig/cli/issues"
Changelog = "https://github.com/gardusig/cli/releases"

[project.scripts]
cli = "src.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.integration*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "integration: tests that may require Docker or external runtime isolation",
  "requires_docs: pack/doc contract tests needing docs/ (excluded from Docker unit context)",
]
filterwarnings = [
  "error",
]
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

# Unit Docker job uses coverage-unit.ini (omits src/integration/* from coverage totals).
