[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name gardusig-cli; GitHub repo github.com/gardusig/cli.
name = "gardusig-cli"
version = "1.1.7"
description = "Linux-first CLI for workflow automation, repository checks, and release orchestration"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "gardusig" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]
dependencies = [
  "typer>=0.15",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "platformdirs>=4.3",
  "PyYAML>=6.0.2",
  "rich>=13.9",
  "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=9",
  "pytest-cov>=7",
  "pytest-timeout>=2.4",
  "twine>=6",
]

[dependency-groups]
dev = [
  "build>=1.2",
  "pytest>=9",
  "pytest-cov>=7",
  "pytest-timeout>=2.4",
  "twine>=6",
]

[project.urls]
Homepage = "https://github.com/gardusig/cli"
Documentation = "https://github.com/gardusig/cli#readme"
Repository = "https://github.com/gardusig/cli"
Issues = "https://github.com/gardusig/cli/issues"
Changelog = "https://github.com/gardusig/cli/releases"

[project.scripts]
cli = "src.cli:run"

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.integration*"]

[tool.setuptools.package-data]
"src.data" = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
markers = [
  "integration: tests that may require Docker or external runtime isolation",
  "requires_docs: pack/doc contract tests needing docs/ (excluded from Docker unit context)",
]
filterwarnings = [
  "error",
]
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["src"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

# Unit Docker job uses coverage-unit.ini (omits src/integration/* from coverage totals).
